tests/baselines/reference/thisInConstructorParameter2.errors.txt
==== tests/cases/compiler/thisInConstructorParameter2.ts (3 errors) ====
    class P {
        x = this;
        static y = this;
                   ~~~~
!!! error TS2140: 'this' cannot be referenced in static initializers in a class body.
    
        constructor(public z = this, zz = this) { }
                               ~~~~
!!! error TS2155: 'this' cannot be referenced in constructor arguments.
                                          ~~~~
!!! error TS2155: 'this' cannot be referenced in constructor arguments.
    
        foo(zz = this) { zz.x; }
        static bar(zz = this) { zz.y; }
    }